<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_beranda"
        android:icon="@drawable/home"
        android:title="@string/title_information" />

    <item
        android:id="@+id/navigation_package"
        android:icon="@drawable/layanan"
        android:title="@string/title_package" />

    <item
        android:id="@+id/navigation_prayer"
        android:icon="@drawable/pray"
        android:title="@string/title_prayer" />

    <item
        android:id="@+id/navigation_form"
        android:icon="@drawable/curricullum"
        android:title="@string/title_form" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account"
        android:title="@string/title_profile" />


</menu>
